--- a/app/src/main/res/layout/item_switch.xml
+++ b/app/src/main/res/layout/item_switch.xml
@@ -21,13 +21,15 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_width="100dp">
+        
         <ImageView
             android:id="@+id/itemLogo"
             android:layout_height="60dp"
             android:layout_width="60dp"
             app:layout_constraintHorizontal_bias="0.5"
             android:padding="0pt"
-            app:srcCompat="@mipmap/ic_launcher"/>
+            app:srcCompat="@mipmap/ic_launcher"
+            />
         <TextView
             android:id="@+id/itemName"
             android:layout_height="wrap_content"
