--- a/app/src/main/res/layout/item_switch.xml
+++ b/app/src/main/res/layout/item_switch.xml
@@ -20,29 +20,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_width="100dp">
-        
+        android:layout_width="@dimen/elementWidth">
+        <!-- 100 60 -->
         <ImageView
             android:id="@+id/itemLogo"
-            android:layout_height="60dp"
-            android:layout_width="60dp"
+            android:layout_height="@dimen/appIconSize"
+            android:layout_width="@dimen/appIconSize"
             app:layout_constraintHorizontal_bias="0.5"
             android:padding="0pt"
             app:srcCompat="@mipmap/ic_launcher"
-            />
+        />
         <TextView
             android:id="@+id/itemName"
+            android:textAppearance="@style/appName"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:layout_marginEnd="0dp"
             android:ellipsize="end"
-            android:textSize="16sp"
-            android:textColor="#ffffffff"
             android:minLines="1"
             android:maxLines="1"
             android:text="App Name"
-            android:textStyle="bold" />
         />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
