--- a/app/src/main/res/xml/pref_others.xml
+++ b/app/src/main/res/xml/pref_others.xml
@@ -2,14 +2,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.preference.PreferenceCategory android:title="Others">
-        <!--
+
+    <androidx.preference.PreferenceCategory android:title="Wake">
         <androidx.preference.SwitchPreference
-            android:defaultValue="@string/pref_disableNaviStart"
-            android:key="disableNaviStart"
-            android:summary="Disable navi start activity of MainUI to avoid screen flickering"
-            android:title="Disable navi start activity" />
-        -->
+            android:defaultValue="@string/pref_accWake"
+            android:key="accWake"
+            android:summary="Wake AppSwitcher by ACC broadcast\nDisable if dialog appears unintended after sleep"
+            android:title="ACC wake" />
+    </androidx.preference.PreferenceCategory>
+    <androidx.preference.PreferenceCategory android:title="Others">
+        <!-- <androidx.preference.SwitchPreference android:defaultValue="@string/pref_disableNaviStart" android:key="disableNaviStart" android:summary="Disable navi start activity of MainUI to avoid screen flickering" android:title="Disable navi start activity" /> -->
         <androidx.preference.SwitchPreference
             android:enabled="false"
             android:key="duraspeed"
@@ -17,29 +19,5 @@
             android:summary=""
             android:title="DuraSpeed" />
         <!-- <androidx.preference.Preference android:key="qbproperty" android:persistent="false" android:selectable="false" android:summary="" android:title="Quickbootmgr property value"/> -->
-    </androidx.preference.PreferenceCategory>
-<androidx.preference.PreferenceCategory android:title="Restore LTE">
-        <androidx.preference.SwitchPreference
-            android:defaultValue="@string/pref_lterecover"
-            android:key="lterecover"
-            android:summary="Restore 4G/LTE connection on service start"
-            android:title="Restore LTE connection"
-            android:enabled="true"
-            android:selectable="true"/>
-        <!-- app:allowDividerAbove="true" -->
-        <androidx.preference.SeekBarPreference
-            android:defaultValue="@string/pref_lterecoverDelay"
-            android:key="lterecoverDelay"
-            android:max="60000"
-            android:min="0"
-            android:summary="xs"
-            android:title="Delay before stop services" />
-        <androidx.preference.SeekBarPreference
-            android:defaultValue="@string/pref_lterecoverDelayBtw"
-            android:key="lterecoverDelayBtw"
-            android:max="20000"
-            android:min="0"
-            android:summary="xs"
-            android:title="Delay before restart after stop" />
     </androidx.preference.PreferenceCategory>
 </androidx.preference.PreferenceScreen>
